# THWM

./: CMakeLists.txt  STM32H723VGTX_FLASH.ld  TODO.md  flash.bat  flash.sh
CMSIS/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h  board.h  gpio.h  i2c.h  lv_conf.h  pwm.h  rcc.h  rtc.h  spi.h
Core/Src/: board.c  gpio.c  i2c.c  main.c  memory.cpp  pwm.c  rcc.c  rtc.c  spi.c  syscalls.c
LL_Drivers/: CMakeLists.txt
Rtos/: CMakeLists.txt  rtos.c  rtos.h
Rtos/Tasks/Backlight_task/: backlight.cpp  backlight.h
Rtos/Tasks/Display_task/: display.cpp  display.h  theme_manager.cpp  theme_manager.hpp
Rtos/Tasks/Display_task/Pages/: main_page.cpp  main_page.hpp  page_manager.cpp  page_manager.hpp
Rtos/Tasks/Display_task/Pages/Main_page/: main_page.cpp  main_page.hpp
Rtos/Tasks/Display_task/Pages/Objects/: calendar_card.cpp  calendar_card.hpp  label.cpp  label.hpp  sensor_card.cpp  sensor_card.hpp  top_panel.cpp  top_panel.hpp
Rtos/Tasks/Display_task/Pages/Settings_page/: settings_page.cpp  settings_page.hpp
Rtos/Tasks/Display_task/Pages/Settings_page/Sub_pages/: about_sub_page.cpp  about_sub_page.hpp  date_sub_page.cpp  date_sub_page.hpp  date_time_sub_page.cpp  date_time_sub_page.hpp  display_sub_page.cpp  display_sub_page.hpp
st7796/: CMakeLists.txt  st7796.c  st7796.h
